--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="page_main_content" parent="TextAppearance.AppCompat">
+        <item name="android:padding">10px</item>
+    </style>
+
 </resources>
